[tool.poetry]
name = "public-tests"
version = "0.1.0"
description = ""
authors = ["Aldrin <DrinMontana@acm.org>"]

[tool.poetry.dependencies]
python = "^3.7"
docker = "^4.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
